Fix letter spacing in main menu.

--- a/static/css/style.moodlebox.css
+++ b/static/css/style.moodlebox.css
@@ -314,7 +314,7 @@ ul.list-style-none {
   font-family: "Raleway", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: 700;
-  letter-spacing: 0.09em;
+  letter-spacing: 0.06em;
   border-top: solid 5px transparent;
 }
 .navbar ul.nav > li > a:hover {
